--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "dev": "node main.js"
   },
   "author": "Jay Harel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.15.3"
+  }
 }
